[package]
name = "paimon"
version = "0.1.0"
authors = ["MeiK <meik2333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.16"
libc = "0.2"
log = "0.3"
android_log = "0.1.3"
regex = "1"
jni = "0.18.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "paimon"
crate-type = ["dylib"]
